feat: [UPBE-558] adeguamento api da controllare (#353)